--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span class="icon-space"><i class="bi bi-person"></i></span>SIGN UP</a>
+                            <a class="nav-link" href="Register.html"><span class="icon-space"><i class="bi bi-person"></i></span>SIGN UP</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link login-gap" onclick="openPopup()"><span class="icon-space"><i class="bi bi-box-arrow-in-right"></i></span>LOG IN</a>
